<resources>
    <string name="app_name">eCommerce</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="username">User Name</string>
    <string name="logout">Logout</string>
    <string name="categories">Categories</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="serach">Search</string>
    <string name="maintainproducts">Maintain Products</string>
    <string name="checkneworders">Check New Orders</string>
    <string name="checkandapproveproducts">Check And Approve Products</string>
    <string name="sellerregistrationform">Seller Registration Form</string>
    <string name="sellername">Name...</string>
    <string name="sellerphone">Phone...</string>
    <string name="selleremail">Email...</string>
    <string name="sellerpassword">Password...</string>
    <string name="selleraddress">Shop - Bussiness Address...</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="loggingout">Logging Out</string>
</resources>
