<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <!--
    (13 - A - 6)
    (13 - A - 7) go to menu > home.xml

        remove the items tht you do not want
    -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/nav_cart"
            android:title="@string/cart"
            android:iconTint="@android:color/white"
            />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/orders"
            android:title= "@string/orders"
            android:iconTint="@android:color/white"
            />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/category"
            android:title="@string/categories"
            android:iconTint="@android:color/white"
            />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings"
            android:iconTint="@android:color/white"
            />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"
            android:iconTint="@android:color/white"
            />
    </group>


</menu>
