<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sellers.SellerRegistrationActivity">

    <!--
        //(23 - A - 1)
        //(23 - A - 2) go to activity_seller_login.xml
        // design seller activity_seller_registration
    -->
    <ImageView
        android:id="@+id/img_seller"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/seller" />

    <TextView
        android:id="@+id/seller_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_seller"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/sellerregistrationform"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/seller_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seller_title"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/sellername"
        android:backgroundTint="@android:color/holo_green_dark"
        android:textColorHint="@android:color/holo_green_dark"
        android:inputType="text"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/seller_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seller_name"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/sellerphone"
        android:backgroundTint="@android:color/holo_green_dark"
        android:textColorHint="@android:color/holo_green_dark"
        android:inputType="number"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/seller_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seller_phone"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/selleremail"
        android:backgroundTint="@android:color/holo_green_dark"
        android:textColorHint="@android:color/holo_green_dark"
        android:inputType="textEmailAddress"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/seller_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seller_email"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/sellerpassword"
        android:backgroundTint="@android:color/holo_green_dark"
        android:textColorHint="@android:color/holo_green_dark"
        android:inputType="textPassword"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/seller_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seller_password"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/selleraddress"
        android:backgroundTint="@android:color/holo_green_dark"
        android:textColorHint="@android:color/holo_green_dark"
        android:inputType="text"
        android:textSize="16sp" />

    <Button
        android:id="@+id/seller_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_below="@id/seller_address"
        android:background="@android:color/white"
        android:textColor="@android:color/holo_green_dark"
        android:text="Register"
        android:textAllCaps="false"
        android:textSize="18sp"
        />
    <Button
        android:id="@+id/seller_already_have_account_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/white"
        android:text="Already Have Account"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>